--- a/I4C3DLauncher/I4C3DLauncher.vcxproj.filters
+++ b/I4C3DLauncher/I4C3DLauncher.vcxproj.filters
@@ -22,6 +22,12 @@
     <None Include="I4C3DLauncher.ico">
       <Filter>リソース ファイル</Filter>
     </None>
+    <None Include="hamster.png">
+      <Filter>リソース ファイル</Filter>
+    </None>
+    <None Include="hamster.bmp">
+      <Filter>リソース ファイル</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
